...

  Container _buildBackButton(BuildContext context) {
    return Container(
      alignment: Alignment.centerLeft,
      width: double.infinity,
      child: IconButton(
          key: Key("back"),
          alignment: Alignment.centerLeft,
          padding: EdgeInsets.all(0),
          icon: Icon(Icons.keyboard_backspace),
          onPressed: () {
            Navigator.pop(context);
          }),
...
  Widget _buildAccountAddButton() {
    return Consumer<AccountsNotifier>(builder: (context, model, child) {
      return Container(
        height: 45,
        width: double.infinity,
        child: ElevatedButton(
            key: Key("save"),
            style: ElevatedButton.styleFrom(primary: Theme.of(context).primaryColor),
            child: _accountsAddStarted == false
                ? Text(
                    widget.id.isEmpty ? 'accountAdd'.tr() : 'accountUpdate'.tr(),
                    style: TextStyle(fontSize: 16, color: Colors.white),
                  )
...
